analysis/low-level-api-fir/testData/getOrBuildFir/invalidCode/duplicatedClassesFunctionParameter.kt
class SomeClass {
    val prop = "abc"
}
class SomeClass {
    fun foo(<expr>p: Int</expr>) {}
}